assets/css/style.css
/*
AUTHOR NAME: ANIK ISLAM
TAMPLETE NAME: INFLUNCER
VERSION: 1.0.0
*/


/* ROOT VARIABLES  */
:root{
    --global-fonts: "Poppins", sans-serif;
    --white-color: #fff; 
    --black-color: #000;
    --light-gray: #8f8f8f2f;
    --nav-menus-color: #3A3A3A;
    --nav-menus-hover-color: #E02C6D;
    --bar-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
    --logo-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    --collection-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
    --star-color: #FB8200;
    --footer-bg: #0A0826;


}

/* ESSENTIL SET UP  */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    font-family: var(--global-fonts); 
}

h1{
    font-size: 52px;
}
h2{
    font-size: 38px;
}
h3{
    font-size: 28px;
}
h4{
    font-size: 24px;
}
h5{
    font-size: 16px;
}
h6{
    font-size: 14px;
}

h1,h2,h3,h4,h5,h6{
    margin: 0;
    padding: 0;
}
.container{
    max-width: 1230px;
    margin: 0 auto;
    padding: 0 15px;
}



/*HEADER SECTION START */
/* .header-section{

} */
.header-row{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 30px 0;
}
.header-left{
    display: flex;
    align-items: center;
    justify-content: center;
    /* gap: 20px; */
}
.bar i{
    font-size: 25px;
    box-shadow: var(--bar-shadow);
    padding: 10px 15px;
    cursor: pointer;
    display: none;
    visibility: hidden;
    margin-right: 20px;
}
.logo a{ 
    color: var(--nav-menus-color);
    text-decoration: none;
}
.nav-menus{
    display: flex;
}
.nav-menus li{
    list-style: none;
}
.nav-menus li a{
    text-decoration: none;
    color: var(--nav-menus-color);
    padding: 0 25px;
    font-size: 18px;
    font-weight: 500;
    transition: 0.2s;
}
.nav-menus li a:hover{
    color: var(--nav-menus-hover-color);
}
nav{
    display: flex;
    align-items: center; 
}
.cart span{
    cursor: pointer;
}
/*HEADER SECTION END */


/*HERO SECTION START */
.hero-section{
    padding: 90px 0;
}
.hero-row{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.hero-title h1 {
    line-height: 60px;
    margin-bottom: 16px;
}
.hero-text p{
    width: 505px;
    font-size: 16px;
    font-weight: 500px;
    margin-bottom: 16px;
}
.hero-btn a{
    text-decoration: none;
    color: var(--white-color);
    background-color: var(--nav-menus-hover-color);
    padding: 10px 15px 10px 25px;
    border-radius: 40px;
    margin-top: 16px;
    display: inline-block;
}
.hero-btn{
    display: flex;
    align-items: center;  
}
.hero-btn .hero-svg{
    margin-left: 8px;
}
.hero-right{
    position: relative; 
}
.hero-right .hero-img{
    z-index: 999;
}
.shape {
    position: absolute;
    top: -45px;
    right: -15px;
    z-index: 99;
    
}
/*HERO SECTION END */


/*LOGO SECTION START */
.logo-section{
    padding-top: 90px;
}
.logo-row{
    display: flex;
    align-items: center;
    justify-content: center; 
    gap: 20px;
}

.logo1 { 
    box-shadow:var(--logo-shadow);
    padding: 25px 35px;
    border-radius: 20px 0px 20px 0px;
    cursor: pointer;
    opacity: 0.6;
    transition: 0.2s;
}
.logo1:hover { 
    box-shadow:var(--bar-shadow);
    padding: 25px 35px;
    cursor: pointer;
    opacity: 1;
}
/*LOGO SECTION END */



/*COLLECTION SECTION START */
.collection-section{
    padding-top: 90px;
    overflow: hidden;
}
.collection-title h3{
    text-align: center;
}
.collection-row{
    display: flex; 
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 50px;
    gap: 30px;
}
.collection-box { 
    box-shadow: var(--collection-box-shadow); 
    width: 330px;
    border-radius: 5px;
    padding: 18px 15px;
}
.col-title h3{
    font-weight: 500;
    margin: 10px 0 5px 0;
}
.col-price h4{
    font-weight: 400;
    margin-bottom: 5px;
}
.col-rating{
    display: flex;
    align-items: center;
    gap: 8px;
    margin-bottom: 8px;
}
.col-rating .star{
    color: var(--star-color);
}
.col-text p{
    font-size: 14px;
    font-weight: 500;
}
/*COLLECTION SECTION END */


/*FEATURE SECTION START */
.feature-section{
    padding-top: 90px ;
}
.feature-row{
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 100px;
}
.feature-content h2{
    margin-bottom: 16px; 
}
.feature-text p{
    padding: 0 195px 0 0;
}
.feature-btn a{
    text-decoration: none;
    font-size: 18px;
    color: var(--white-color);
    background-color: var(--nav-menus-hover-color);
    padding: 10px 25px;
    display: inline-block;
    margin-top: 20px;
}
.feature-btn{
    display: flex;
    align-items: center; 
}
.feature-btn .f-btn{
    margin-left: 8px;
}
/*FEATURE SECTION END */

/*FOOTER SECTION START */
.footer-section{
    background-color: var(--footer-bg);
    margin-top: 90px;
}
.footer-content{
    text-align: center;
    color: var(--white-color);
    padding: 50px 0;    
}
.footer-title h4{
    margin-bottom: 5px; 
}
.footer-icon{
    display: flex;
    gap: 15px;
    align-items: center;
    justify-content: center;
    margin-top: 18px; 
}
.icon-bg{ 
    height: 50px;
    width: 50px;
    background-color: var(--light-gray);  
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    
}
.footer-icon i{
    font-size: 25px; 
    color: var(--white-color); 
    padding: 100px;   
}
.copy{
    margin-top: 20px;
    text-align: center;
    color: var(--white-color);
    font-size: 16px;
}
/*FOOTER SECTION END */

